--- a/css/echode.css
+++ b/css/echode.css
@@ -4953,9 +4953,25 @@ div#item_view article {
   padding: 20px;
 }
 
+.details_popup {
+  background-color: white;
+  width: 300px;
+  padding: 10px 20px 20px;
+  border: 1px solid #00a6e4;
+}
+
 .album_add_popup_close {
   margin-right: -18px;
   margin-top:-18px;
+}
+
+.details_popup_close {
+  margin-right: -15px;
+  margin-top: -5px;
+}
+
+.details_popup #popup_title {
+  font-weight: bold;
 }
 
 @-webkit-keyframes passing-through { 0% { opacity: 0; -webkit-transform: translateY(40px); -moz-transform: translateY(40px); -ms-transform: translateY(40px); -o-transform: translateY(40px); transform: translateY(40px); }
@@ -5002,8 +5018,8 @@ div#item_view article {
   -webkit-transition: opacity 0.2s linear; -moz-transition: opacity 0.2s linear; -ms-transition: opacity 0.2s linear;
   -o-transition: opacity 0.2s linear; transition: opacity 0.2s linear;
 }
-.dropzone .dz-preview .dz-remove { font-size: 14px; text-align: center; display: block; cursor: pointer; border: none; }
-.dropzone .dz-preview .dz-remove:hover { text-decoration: underline; }
+.dropzone .dz-preview .dz-remove, .dropzone .dz-preview .dz-edit-details { font-size: 14px; text-align: center; display: block; cursor: pointer; border: none; }
+.dropzone .dz-preview .dz-remove:hover, .dropzone .dz-preview .dz-edit-details:hover { text-decoration: underline; }
 /*.dropzone .dz-preview:hover .dz-details { opacity: 1; }*/
 .dropzone .dz-preview .dz-details {
   z-index: 20; position: absolute; top: 0; left: 0; opacity: 1; min-width: 100%; max-width: 100%;
@@ -5121,4 +5137,13 @@ section.contribute div.container {
   transform: rotate(270deg);
   -webkit-transform: rotate(270deg);
   -ms-transform: rotate(270deg);
+}
+
+.additional_details_form dl dt {
+  margin-top: 10px;
+  font-weight: normal;
+}
+
+#omekaDZ.dz-max-files-reached div.dz-preview a.dz-edit-details {
+  display: none;
 }
